tests/src/frontend/syntax/invalid/lambda_inconsistent_param_types_2.sk
fun main(): String {
  l = (p1: Int, p2) -> p2;
  l(42, "Fail")
}
